# Gekko-C

./: CMakeLists.txt  LICENSE  README.md  gekko.c  gekko.h  jsmn.h
platform/windows/libssh2/lib/: libssh2.lib
platform/windows/libssh2/lib/pkgconfig/: libssh2.pc
